@@ -5,7 +5,11 @@
 
 	my $err;
 
+	Tab::debuglog("Yo.  ");
+
 	if ($Tab::hostname eq "www.tabroom.com") { 
+	
+		Tab::debuglog("Yo2 ");
 
 		my $base_url = $r->hostname if $r;
 
