@@ -51,3 +51,69 @@ sub can_alter {
 	$m->abort();
 }
 
+
+sub setting {
+
+	my ($self, $tag, $value, $blob) = @_;
+
+	$/ = "";			#Remove all trailing newlines
+	chomp $blob;
+
+	my @existing = Tab::AccountSetting->search(  
+		account => $self->id,
+		tag => $tag
+	);
+
+	if (defined $value) { 
+			
+		if (@existing) {
+
+			my $exists = shift @existing;
+			$exists->value($value);
+			$exists->value_text($blob) if $value eq "text";
+			$exists->value_date($blob) if $value eq "date";
+			$exists->update;
+
+
+			if ($value eq "delete" || $value eq "" || $value eq "0") { 
+				$exists->delete;
+			}
+
+			foreach my $other (@existing) { 
+				$other->delete;
+			}
+
+			return;
+
+		} elsif ($value ne "delete" && $value && $value ne "0") {
+
+			my $exists = Tab::AccountSetting->create({
+				account => $self->id,
+				tag => $tag,
+				value => $value,
+			});
+
+			if ($value eq "text") { 
+				$exists->value_text($blob);
+			}
+
+			if ($value eq "date") { 
+				$exists->value_date($blob);
+			}
+
+			$exists->update;
+
+		}
+
+	} else {
+
+		return unless @existing;
+		my $setting = shift @existing;
+		return $setting->value_text if $setting->value eq "text";
+		return $setting->value_date if $setting->value eq "date";
+		return $setting->value;
+
+	}
+
+}
+
