@@ -36,7 +36,7 @@ $dbuser = "itab";
 
 #Database password
 $dbpass = "DataBasePassword";
-$bakery_key = "StuffFromIdea";
+#$bakery_key = "StuffFromIdea";
 
 #Component root
 $file_root = '/www/itab/web/';
