@@ -31,6 +31,7 @@ use Tab::General;
 use Tab::DBI;
 use Tab::Account;
 use Tab::AccountConflict;
+use Tab::AccountSetting;
 use Tab::Ballot;
 use Tab::BallotValue;
 use Tab::Chapter;
